--- a/package.json
+++ b/package.json
@@ -8,8 +8,22 @@
     "start": "next start"
   },
   "dependencies": {
+    "antd": "^4.10.0",
+    "babel-plugin-import": "^1.13.3",
+    "less": "^4.0.0",
+    "less-vars-to-js": "^1.3.0",
     "next": "10.0.5",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "styled-components": "^5.2.1"
+  },
+  "devDependencies": {
+    "@types/node": "^14.14.20",
+    "@types/react": "^17.0.0",
+    "@types/styled-components": "^5.1.7",
+    "@zeit/next-less": "^1.0.1",
+    "@zeit/next-sass": "^1.0.1",
+    "null-loader": "^4.0.1",
+    "typescript": "^4.1.3"
   }
 }
